--- a/miprimerproyectoandroid/app/src/main/res/layout/activity_main.xml
+++ b/miprimerproyectoandroid/app/src/main/res/layout/activity_main.xml
@@ -26,3 +26,6 @@
         tools:layout_editor_absoluteY="100dp"
         tools:ignore="MissingConstraints"
         android:layout_gravity="center_horizontal" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
